--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_feedback.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_feedback.xml
@@ -7,46 +7,28 @@
     tools:context=".FeedbackActivity"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_feedback"
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:title="反馈"
-        app:theme="@style/ToolbarTheme">
-
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
+
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:text="标题"
-            android:layout_marginTop="20dp"/>
-
-        <EditText
-            android:id="@+id/textView_feedback_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginTop="20dp"
             android:text="反馈内容"
+            android:textSize="20sp"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/colorBlack"
             />
 
 
@@ -67,7 +49,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:text="反馈邮箱"
-            android:layout_marginTop="20dp"/>
+            android:textSize="20sp"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/colorBlack"/>
 
         <EditText
             android:id="@+id/textView_feedback_email"
@@ -76,14 +60,17 @@
             android:ems="10"
             android:inputType="textEmailAddress" />
 
+
         <Button
-            android:id="@+id/textView_feedback_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:onClick="buttonClick"
-            android:text="提交反馈" />
+            android:layout_marginTop="30dp"
+            android:background="@drawable/orange_button"
+            android:layout_gravity="center"
+            android:id="@+id/button_bind_bind_card"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:text="提交反馈"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
