--- a/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <!--#3f56d3-->
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#37309f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FF9546</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorBlack">#000000</color>
+    <color name="colorBlack">#f5000000</color>
     <color name="colorOrange">#FF8022</color>
     <color name="colorLightOrange">#FF9546</color>
     <color name="colorUnable">#c3c3c3</color>
