--- a/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
+++ b/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
@@ -118,7 +118,7 @@
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="hJs-6T-qR9" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
                             <rect key="frame" x="10" y="5.5" width="198" height="139"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
                                     <rect key="frame" x="-1.5" y="-5.5" width="201" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="201" id="Roa-De-Y1z"/>
@@ -159,7 +159,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.96260310920000003" green="0.96260310920000003" blue="0.96260310920000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="620" id="6g4-ba-VM5"/>
                         <constraint firstItem="zXD-Fz-bBn" firstAttribute="top" secondItem="hJs-6T-qR9" secondAttribute="top" id="ANh-YI-zV1"/>
