--- a/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
+++ b/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DiscoverCouponView" customModule="PointExchange" customModuleProvider="target">
             <connections>
+                <outlet property="contentView" destination="66E-9D-dem" id="dj1-2I-fr3"/>
                 <outlet property="image1" destination="DNG-9x-19I" id="nkI-Gc-mO5"/>
                 <outlet property="image2" destination="8ZQ-9I-MRs" id="g25-uf-lRh"/>
                 <outlet property="image3" destination="Hk0-ze-aJW" id="bOE-Fv-128"/>
@@ -19,18 +20,19 @@
                 <outlet property="imageView2" destination="6nn-iq-PSa" id="wBG-by-8PC"/>
                 <outlet property="imageView3" destination="zXD-Fz-bBn" id="BzC-7O-ujc"/>
                 <outlet property="view" destination="JFf-4c-K7x" id="V7v-OH-R4X"/>
+                <outlet property="viewWidthCons" destination="6g4-ba-VM5" id="iAO-TS-suy"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <scrollView autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="JFf-4c-K7x">
-            <rect key="frame" x="0.0" y="0.0" width="470" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66E-9D-dem">
-                    <rect key="frame" x="0.0" y="0.0" width="500" height="220"/>
+                    <rect key="frame" x="0.0" y="0.0" width="700" height="220"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="6nn-iq-PSa" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                            <rect key="frame" x="158.5" y="30" width="133" height="160"/>
+                            <rect key="frame" x="148.5" y="30" width="133" height="160"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="8ZQ-9I-MRs">
                                     <rect key="frame" x="-13.5" y="-8.5" width="160" height="107"/>
@@ -63,7 +65,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="zXD-Fz-bBn" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                            <rect key="frame" x="306.5" y="30" width="133.5" height="160"/>
+                            <rect key="frame" x="296.5" y="30" width="133.5" height="160"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="Hk0-ze-aJW">
                                     <rect key="frame" x="-13" y="-8.5" width="160" height="107"/>
@@ -96,7 +98,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="hJs-6T-qR9" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                            <rect key="frame" x="10" y="30" width="133.5" height="160"/>
+                            <rect key="frame" x="0.0" y="30" width="133.5" height="160"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
                                     <rect key="frame" x="-13.5" y="-8.5" width="160" height="107"/>
@@ -132,17 +134,17 @@
                     <color key="backgroundColor" red="0.96260310920000003" green="0.96260310920000003" blue="0.96260310920000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="6nn-iq-PSa" firstAttribute="leading" secondItem="hJs-6T-qR9" secondAttribute="trailing" constant="15" id="2fj-IX-RCw"/>
-                        <constraint firstAttribute="width" constant="500" id="6g4-ba-VM5"/>
+                        <constraint firstAttribute="width" constant="700" id="6g4-ba-VM5"/>
                         <constraint firstItem="zXD-Fz-bBn" firstAttribute="top" secondItem="hJs-6T-qR9" secondAttribute="top" id="ANh-YI-zV1"/>
                         <constraint firstItem="hJs-6T-qR9" firstAttribute="centerY" secondItem="66E-9D-dem" secondAttribute="centerY" id="VkS-ig-FoB"/>
                         <constraint firstItem="zXD-Fz-bBn" firstAttribute="leading" secondItem="6nn-iq-PSa" secondAttribute="trailing" constant="15" id="afj-I2-41y"/>
                         <constraint firstItem="6nn-iq-PSa" firstAttribute="top" secondItem="hJs-6T-qR9" secondAttribute="top" id="eKH-99-BMe"/>
-                        <constraint firstItem="hJs-6T-qR9" firstAttribute="leading" secondItem="66E-9D-dem" secondAttribute="leading" constant="10" id="sn0-qJ-Ws4"/>
+                        <constraint firstItem="hJs-6T-qR9" firstAttribute="leading" secondItem="66E-9D-dem" secondAttribute="leading" id="sn0-qJ-Ws4"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="66E-9D-dem" secondAttribute="trailing" id="0JB-HU-Vw2"/>
+                <constraint firstAttribute="trailing" secondItem="66E-9D-dem" secondAttribute="trailing" constant="-100" id="0JB-HU-Vw2"/>
                 <constraint firstItem="66E-9D-dem" firstAttribute="top" secondItem="JFf-4c-K7x" secondAttribute="top" id="76W-0T-NQS"/>
                 <constraint firstAttribute="bottom" secondItem="66E-9D-dem" secondAttribute="bottom" id="Isb-2c-v3H"/>
                 <constraint firstItem="66E-9D-dem" firstAttribute="leading" secondItem="JFf-4c-K7x" secondAttribute="leading" id="KTh-kE-Txw"/>
