--- a/APP/IOS/PointExchange/PointExchange/HistoryTableViewCell.xib
+++ b/APP/IOS/PointExchange/PointExchange/HistoryTableViewCell.xib
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,29 +20,29 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="willUse" translatesAutoresizingMaskIntoConstraints="NO" id="c71-dH-ynZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="98"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="97.5"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GiB-vM-13z">
-                        <rect key="frame" x="29" y="17.5" width="59" height="59"/>
+                        <rect key="frame" x="29" y="17.5" width="59" height="58.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="GiB-vM-13z" secondAttribute="height" multiplier="1:1" id="A3C-gK-S9I"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pes-fJ-RLf"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-----" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DU-e0-UCa">
-                        <rect key="frame" x="103" y="17.5" width="40.5" height="21.5"/>
+                        <rect key="frame" x="108" y="17.5" width="40.5" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通用点" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r0G-ix-9so">
-                        <rect key="frame" x="143" y="17.5" width="55.5" height="21.5"/>
+                        <rect key="frame" x="148.5" y="17.5" width="55.5" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y0X-li-KNJ">
-                        <rect key="frame" x="103" y="50.5" width="151" height="15"/>
+                        <rect key="frame" x="108" y="51" width="146" height="15"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <textInputTraits key="textInputTraits"/>
@@ -53,7 +51,7 @@
                         <rect key="frame" x="262" y="7" width="101" height="80"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Nuz-I2-NPF">
-                                <rect key="frame" x="15" y="20" width="69.5" height="38.5"/>
+                                <rect key="frame" x="16" y="21" width="69.5" height="38.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有效期至" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TGT-W7-RWe">
                                         <rect key="frame" x="0.0" y="0.0" width="69.5" height="20.5"/>
@@ -70,7 +68,7 @@
                                 </subviews>
                             </stackView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已过期" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDU-lH-p8n">
-                                <rect key="frame" x="20.5" y="28" width="61.5" height="24"/>
+                                <rect key="frame" x="20" y="28" width="61.5" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" red="0.99215686270000003" green="0.99215686270000003" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -89,7 +87,7 @@
                     <constraint firstItem="iJQ-uO-gCw" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="80/97.5" id="5YG-k7-LxB"/>
                     <constraint firstItem="iJQ-uO-gCw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="6Zo-oh-FHX"/>
                     <constraint firstItem="iJQ-uO-gCw" firstAttribute="leading" secondItem="y0X-li-KNJ" secondAttribute="trailing" constant="8" id="Dbm-wD-DbL"/>
-                    <constraint firstItem="8DU-e0-UCa" firstAttribute="leading" secondItem="c71-dH-ynZ" secondAttribute="leading" constant="103" id="FUs-Rc-Ev0"/>
+                    <constraint firstItem="8DU-e0-UCa" firstAttribute="leading" secondItem="GiB-vM-13z" secondAttribute="trailing" constant="20" id="FUs-Rc-Ev0"/>
                     <constraint firstAttribute="trailing" secondItem="iJQ-uO-gCw" secondAttribute="trailing" constant="12" id="FpY-JZ-Htb"/>
                     <constraint firstItem="iJQ-uO-gCw" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="101/375" id="JBf-Wa-DWy"/>
                     <constraint firstItem="c71-dH-ynZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kzi-67-LHH"/>
