修改发现页ui 修改首页卡片数量 修改卡片背景图片

--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_find.xml
@@ -54,6 +54,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="name"
+                        android:textColor="#262626"
                         android:textSize="24sp"
                         android:layout_margin="2dp"
                         android:maxLines="1"/>
