--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
@@ -63,6 +63,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="30dp"
                 android:textSize="24sp"
+                android:textColor="#000000"
                 android:text="推荐优惠"/>
 
             <android.support.v7.widget.RecyclerView
@@ -83,6 +84,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="30dp"
                 android:textSize="24sp"
+                android:textColor="#000000"
                 android:text="推荐商家"/>
 
             <android.support.v7.widget.RecyclerView
