--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_activity_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_activity_find.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
-        android:layout_width="220dp"
+        android:layout_width="150dp"
         android:layout_height="match_parent"
         app:cardCornerRadius="12dp"
         app:cardElevation="5dp"
@@ -17,14 +17,15 @@
                 android:id="@+id/imageView_activity_find_item"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@id/relative_activity_find"
                 android:scaleType="centerCrop"
                 android:src="@drawable/loading_card"/>
 
             <RelativeLayout
+                android:id="@+id/relative_activity_find"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="#90bdbdbd">
+                android:layout_height="50dp">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_centerHorizontal="true"
@@ -36,9 +37,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="xxxxxxxxx"
+                        android:textColor="#262626"
                         android:textSize="18sp"
-                        android:textColor="@color/colorWhite"
-                        android:maxLines="2"/>
+                        android:maxLines="1"/>
                 </LinearLayout>
             </RelativeLayout>
 
