--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find.xml
@@ -63,6 +63,8 @@
 
                 <ImageView
                     android:id="@+id/imageView_logo_detail_find"
+                    android:background="@drawable/circle"
+                    android:padding="2dp"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center_horizontal"
@@ -166,11 +168,11 @@
                 android:textSize="24sp" />
 
             <android.support.v7.widget.RecyclerView
-                android:layout_gravity="center_horizontal"
                 android:id="@+id/recyclerView_ad_detail_find"
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
-                android:layout_centerHorizontal="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"></android.support.v7.widget.RecyclerView>
 
 
