修改活动详情页布局 修改logo显示ui-padding 修改tab名称

--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
@@ -47,6 +47,7 @@
                             android:id="@+id/imageView_card_info"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
+                            android:padding="10.3dp"
                             android:scaleType="centerInside"
                             android:layout_marginStart="20dp"
                             android:layout_gravity="center_vertical"
