--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_activity.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_activity.xml
@@ -40,6 +40,8 @@
                         android:id="@+id/textView_name_detail_activity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="40dp"
                         android:text="NAME"
                         android:textStyle="bold"
                         android:textSize="28sp"/>
